changed file names

--- a/train_gpt2_summarizer.ipynb
+++ b/train_gpt2_summarizer.ipynb
@@ -195,10 +195,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#training the model\n",
-    "\n",
+    "# load pretrained GPT2\n",
     "tokenizer = add_special_tokens()\n",
     "ignore_idx = tokenizer.pad_token_id\n",
+    "model = GPT2LMHeadModel.from_pretrained('gpt2')\n",
+    "model.resize_token_embeddings(len(tokenizer))\n",
+    "model.to(args.device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#training the model\n",
+    "\n",
     "start = time.time()\n",
     "train(args, model, tokenizer, train_data, valid_data, ignore_index)\n",
     "print('total time: ', (time.time()-start)/60, \" minutes\", end='\\n\\n')\n",
