--- a/train_gpt2_summarizer_np.ipynb
+++ b/train_gpt2_summarizer_np.ipynb
@@ -198,10 +198,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# training\n",
-    "\n",
+    "# load pretrained GPT2\n",
     "tokenizer = add_special_tokens()\n",
     "ignore_idx = tokenizer.pad_token_id\n",
+    "model = GPT2LMHeadModel.from_pretrained('gpt2')\n",
+    "model.resize_token_embeddings(len(tokenizer))\n",
+    "model.to(args.device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# training\n",
+    "\n",
     "start = time.time()\n",
     "train(args, tokenizer, model, data, ignore_index, train_size, val_size)\n",
     "print('total time: ', (time.time()-start)/60, \" minutes\", end='\\n\\n')\n",
