--- a/train_gpt2_summarizer_np.ipynb
+++ b/train_gpt2_summarizer_np.ipynb
@@ -20,7 +20,7 @@
     "import torch\n",
     "from torch.nn import CrossEntropyLoss\n",
     "import torch.nn.functional as F\n",
-    "from torch.utils.data import DataLoader, RandomSampler, SequentialSampler\n",
+    "from torch.utils.data import DataLoader, RandomSampler, SequentialSampler, TensorDataset\n",
     "from tqdm import tnrange, tqdm_notebook\n",
     "\n",
     "from dataset import GPT21024Dataset \n",
