fixed max_articles_size : expected 2 got 1

--- a/train_gpt2_summarizer.ipynb
+++ b/train_gpt2_summarizer.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (utils.py, line 70)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[0;32m\"C:\\Users\\skrro\\miniconda3\\envs\\torch\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001b[0m, line \u001b[0;32m3418\u001b[0m, in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \u001b[0;32m\"<ipython-input-2-75f0343a4880>\"\u001b[0m, line \u001b[0;32m18\u001b[0m, in \u001b[0;35m<module>\u001b[0m\n    from dataset import GPT21024Dataset\n",
+      "\u001b[1;36m  File \u001b[1;32m\"D:\\IMP_REPOS\\Generating_Text_Summary_With_GPT2\\dataset.py\"\u001b[1;36m, line \u001b[1;32m7\u001b[1;36m, in \u001b[1;35m<module>\u001b[1;36m\u001b[0m\n\u001b[1;33m    from utils import add_special_tokens\u001b[0m\n",
+      "\u001b[1;36m  File \u001b[1;32m\"D:\\IMP_REPOS\\Generating_Text_Summary_With_GPT2\\utils.py\"\u001b[1;36m, line \u001b[1;32m70\u001b[0m\n\u001b[1;33m    context = torch.tensor(context, dtype=torch.long, device=device)\u001b[0m\n\u001b[1;37m                                                                    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
    "source": [
     "import argparse\n",
     "from datetime import datetime\n",
@@ -15,8 +28,8 @@
     "import time\n",
     "\n",
     "import numpy as np\n",
-    "from pytorch_transformers import ConstantLRSchedule, GPT2Config, GPT2LMHeadModel,AdamW, GPT2Tokenizer, WarmupLinearSchedule\n",
-    "from tensorboardX import SummaryWriter\n",
+    "from transformers import ConstantLRSchedule, GPT2Config, GPT2LMHeadModel,AdamW, GPT2Tokenizer, WarmupLinearSchedule\n",
+    "# from tensorboardX import SummaryWriter\n",
     "import torch\n",
     "from torch.nn import CrossEntropyLoss\n",
     "import torch.nn.functional as F\n",
@@ -25,6 +38,27 @@
     "\n",
     "from dataset import GPT21024Dataset \n",
     "from utils import add_special_tokens, beam_search, generate_beam_sample, generate_sample, sample_seq, set_seed, top_k_top_p_filtering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.2.1'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import transformers as trf\n",
+    "trf.__version__"
    ]
   },
   {
@@ -225,9 +259,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (fastai2019)",
+   "display_name": "torch",
    "language": "python",
-   "name": "fastai2019"
+   "name": "torch"
   },
   "language_info": {
    "codemirror_mode": {
@@ -239,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
