resolved ignr_idx and fixed training code errors

--- a/train_gpt2_summarizer_np.ipynb
+++ b/train_gpt2_summarizer_np.ipynb
@@ -15,12 +15,12 @@
     "import time\n",
     "\n",
     "import numpy as np\n",
-    "from pytorch_transformers import ConstantLRSchedule, GPT2Config, GPT2LMHeadModel,AdamW, GPT2Tokenizer, WarmupLinearSchedule\n",
-    "from tensorboardX import SummaryWriter\n",
+    "from transformers import ConstantLRSchedule, GPT2Config, GPT2LMHeadModel,AdamW, GPT2Tokenizer, WarmupLinearSchedule\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
     "import torch\n",
     "from torch.nn import CrossEntropyLoss\n",
     "import torch.nn.functional as F\n",
-    "from torch.utils.data import DataLoader, RandomSampler, SequentialSampler, TensorDataset\n",
+    "from torch.utils.data import DataLoader, RandomSampler, SequentialSampler\n",
     "from tqdm import tnrange, tqdm_notebook\n",
     "\n",
     "from dataset import GPT21024Dataset \n",
@@ -39,11 +39,11 @@
     "parser.add_argument(\"--lr\",default=5e-5, type=float, help=\"learning rate\")\n",
     "parser.add_argument(\"--seed\",default=42, type=int,  help=\"seed to replicate results\")\n",
     "parser.add_argument(\"--n_gpu\",default=1, type=int,  help=\"no of gpu available\")\n",
-    "parser.add_argument(\"--gradient_accumulation_steps\",default=32, type=int, help=\"gradient_accumulation_steps\")\n",
+    "parser.add_argument(\"--gradient_accumulation_steps\",default=2, type=int, help=\"gradient_accumulation_steps\")\n",
     "parser.add_argument(\"--batch_size\",default=1, type=int,  help=\"batch_size\")\n",
     "parser.add_argument(\"--num_workers\",default=4, type=int,  help=\"num of cpus available\")\n",
-    "parser.add_argument(\"--device\",default=torch.device('cuda'), help=\"torch.device object\")\n",
-    "parser.add_argument(\"--num_train_epochs\",default=5, type=int,  help=\"no of epochs of training\")\n",
+    "parser.add_argument(\"--device\",default=torch.device('cpu'), help=\"torch.device object\")\n",
+    "parser.add_argument(\"--num_train_epochs\",default=1, type=int,  help=\"no of epochs of training\")\n",
     "parser.add_argument(\"--output_dir\",default='./output', type=str,  help=\"path to save evaluation results\")\n",
     "parser.add_argument(\"--model_dir\",default='./weights', type=str,  help=\"path to save trained model\")\n",
     "parser.add_argument(\"--max_grad_norm\",default=1.0, type=float, help=\"max gradient norm.\")\n",
@@ -87,9 +87,7 @@
     "    for _ in train_iterator:\n",
     "        epoch_iterator = tqdm_notebook(train_dl, desc=\"Training\")\n",
     "        for step, batch in enumerate(epoch_iterator):\n",
-    "            inputs, labels = torch.tensor(batch['article']), torch.tensor(batch['article'])\n",
-    "            inputs = inputs.to(args.device)\n",
-    "            labels = labels.to(args.device)\n",
+    "            inputs, labels = batch['article'].to(args.device), batch['article'].to(args.device)\n",
     "            model.train()\n",
     "            logits = model(inputs)[0]\n",
     "            idx = batch['sum_idx'].item() # index of separator token\n",
@@ -112,7 +110,7 @@
     "                print(\"loss:\", loss.item(), end='\\n\\n')\n",
     "                if (step + 1)/args.gradient_accumulation_steps == 1.0:\n",
     "                \tprint('After 1st update: ', end='\\n\\n')\n",
-    "                \tgenerate_sample(valid_dataset, tokenizer, num=2, eval_step=False)\n",
+    "                \tgenerate_sample(valid_dataset, tokenizer, num=2, eval_step=False,devcie=args.device)\n",
     "                \n",
     "                \n",
     "            if (step + 1) % (10*args.gradient_accumulation_steps) == 0:\n",
@@ -120,7 +118,7 @@
     "                for key, value in results.items():\n",
     "                    writer.add_scalar('eval_{}'.format(key), value, global_step)\n",
     "                print('After', global_step+1,'updates: ', end='\\n\\n')\n",
-    "                generate_sample(valid_dataset, tokenizer, num=2, eval_step=True)\n"
+    "                generate_sample(valid_dataset, tokenizer, num=2, eval_step=True,device=args.device)\n"
    ]
   },
   {
@@ -130,14 +128,14 @@
    "outputs": [],
    "source": [
     "def evaluate(args, model, eval_dataset, ignore_index, global_step=None):\n",
-    " \t\"\"\" Returns perplexity score on validation dataset.\n",
-    " \t\tArgs:\n",
-    " \t\t\targs: dict that contains all the necessary information passed by user while training\n",
-    " \t\t\tmodel: finetuned gpt/gpt2 model\n",
-    " \t\t\teval_dataset: GPT21024Dataset object for validation data\n",
-    " \t\t\tglobal_step: no. of times gradients have backpropagated\n",
-    " \t\t\tignore_index: token not considered in loss calculation\n",
-    " \t\"\"\"\n",
+    "    \"\"\" Returns perplexity score on validation dataset.\n",
+    "        Args:\n",
+    "            args: dict that contains all the necessary information passed by user while training\n",
+    "            model: finetuned gpt/gpt2 model\n",
+    "            eval_dataset: GPT21024Dataset object for validation data\n",
+    "            global_step: no. of times gradients have backpropagated\n",
+    "            ignore_index: token not considered in loss calculation\n",
+    "    \"\"\"\n",
     "    if not os.path.exists(args.output_dir):\n",
     "        os.mkdir(args.output_dir)\n",
     "    eval_output_dir = args.output_dir\n",
@@ -228,9 +226,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (fastai2019)",
+   "display_name": "torch",
    "language": "python",
-   "name": "fastai2019"
+   "name": "torch"
   },
   "language_info": {
    "codemirror_mode": {
@@ -242,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
