fixed undefined variable

--- a/play_with_summarizer.ipynb
+++ b/play_with_summarizer.ipynb
@@ -40,7 +40,6 @@
     "parser = argparse.ArgumentParser()\n",
     "\n",
     "parser.add_argument(\"--seed\",default=42, type=int,  help=\"seed to replicate results\")\n",
-    "parser.add_argument(\"--n_gpu\",default=1, type=int,  help=\"no of gpu available\")\n",
     "parser.add_argument(\"--num_workers\",default=4, type=int,  help=\"num of cpus available\")\n",
     "parser.add_argument(\"--device\",default=torch.device('cuda'), help=\"torch.device object\")\n",
     "parser.add_argument(\"--output_dir\",default='./output', type=str,  help=\"path to save evaluation results\")\n",
@@ -718,7 +717,7 @@
    ],
    "source": [
     "article = sentences_from_query(\"neural embedding\")\n",
-    "article = tokenizer.encode(article_text)[:900]"
+    "article = tokenizer.encode(article)[:900]"
    ]
   },
   {
