handled indentation and unnecesary imports

--- a/train_gpt2_summarizer.ipynb
+++ b/train_gpt2_summarizer.ipynb
@@ -8,14 +8,11 @@
    "source": [
     "import argparse\n",
     "from datetime import datetime\n",
-    "import json\n",
     "import os\n",
-    "import pickle\n",
-    "import random\n",
     "import time\n",
     "\n",
     "import numpy as np\n",
-    "from transformers import ConstantLRSchedule, GPT2Config, GPT2LMHeadModel,AdamW, GPT2Tokenizer, WarmupLinearSchedule\n",
+    "from transformers import GPT2LMHeadModel,AdamW, WarmupLinearSchedule\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
     "import torch\n",
     "from torch.nn import CrossEntropyLoss\n",
@@ -24,7 +21,7 @@
     "from tqdm import tnrange, tqdm_notebook\n",
     "\n",
     "from dataset import GPT21024Dataset \n",
-    "from utils import add_special_tokens, beam_search, generate_beam_sample, generate_sample, sample_seq, set_seed, top_k_top_p_filtering"
+    "from utils import add_special_tokens, generate_sample, set_seed"
    ]
   },
   {
